# magnesium

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  add_key.sh  config.toml  remove_key.sh
src/: main.rs
src/models/: key.rs
src/routes/: add_key.rs  mod.rs  remove_key.rs  serve.rs  upload.rs
src/utils/: buckets_setup.rs  check_key.rs  config.rs  generate_key.rs  mod.rs  print_magnesium.rs
