[package]
name = "magnesium"
version = "1.0.0"
authors = ["github.com/maximierung"]
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
futures = "0.3"
dotenv = "0.15.0"
actix-multipart = "0.6.1"
once_cell = "1.8.0"
mongodb = "2.8.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.10"
rand = "0.8.5"
uuid = { version = "1", features = ["v4"] }
image = "0.24.8"
serde_json = "1.0.114"
chrono = "0.4.34"
actix-cors = "0.7.0"